cros: Close Shortcuts window by CTRL+W

Currently Shortcuts window can only be closed by mouse click. This cl
adds CTRL+W accelerator to close the window.

Bug: 819815
Test: KeyboardShortcutViewTest.CloseWindowByAccelerator
Change-Id: Icfa340e5c947f823ea62e25df06536f216563ec7
Reviewed-on: https://chromium-review.googlesource.com/1006115
Commit-Queue: Tao Wu <wutao@chromium.org>
Reviewed-by: Qiang Xu <warx@google.com>
Cr-Commit-Position: refs/heads/master@{#550281}
Former-commit-id: fa466d805d47fe3447f426acc7b2c349588d0540