ash/components/shortcut_viewer/views/keyboard_shortcut_view_unittest.cc
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/test/ash_test_base.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "ui/aura/window.h"
+#include "ui/events/test/event_generator.h"
 #include "ui/views/controls/textfield/textfield.h"
 #include "ui/views/widget/widget.h"
 
@@ -172,6 +173,17 @@ TEST_F(KeyboardShortcutViewTest, FocusOnSearchBox) {
 
   // Cleaning up.
   widget->CloseNow();
+}
+
+// Test that the window can be closed by accelerator.
+TEST_F(KeyboardShortcutViewTest, CloseWindowByAccelerator) {
+  // Showing the widget.
+  views::Widget* widget = KeyboardShortcutView::Show(CurrentContext());
+  EXPECT_FALSE(widget->IsClosed());
+
+  ui::test::EventGenerator& event_generator = GetEventGenerator();
+  event_generator.PressKey(ui::VKEY_W, ui::EF_CONTROL_DOWN);
+  EXPECT_TRUE(widget->IsClosed());
 }
 
 }  // namespace keyboard_shortcut_viewer
